<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilnombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/resnombre"
            android:ems="10"
            android:id="@+id/etxtnombre"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fecha de nacimiento"
            android:layout_gravity="center"
            />

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/datePicker"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:layout_gravity="center"

            />
    </LinearLayout>






    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentStart="true">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/etxttelefono"
        android:hint="@string/restelefono"
        android:layout_marginBottom="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/etxtemail" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="textEmailAddress"
            android:hint="@string/resemail"
            android:id="@+id/etxtemail"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tildescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:layout_alignParentStart="true">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/etxtdescripcion"
            android:hint="@string/resdescripcion"

            android:layout_alignStart="@+id/datePicker" />

    </android.support.design.widget.TextInputLayout>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonsiguiente"
        android:id="@+id/siguienteid"
        android:layout_marginLeft="150dp"
        android:focusableInTouchMode="false"
        android:clickable="true"
        android:nestedScrollingEnabled="false"
        android:theme="@style/raised"
        android:layout_marginTop="5dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />





</LinearLayout>
