<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="mx.licdaniellino.contactofinal.Main2Activity"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "Confirmar Datos"
        android:id="@+id/tvConfirmarDatos"
        android:textStyle="italic"
        android:textAllCaps="true"
        android:textSize="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="26dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/resnombre"
        android:id="@+id/tvnombreactdos"
        android:textStyle="italic"
        android:textAllCaps="true"
        android:textSize="15dp"
        android:layout_gravity="left"
        android:layout_marginTop="26dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fecha de Nacimiento: "
            android:id="@+id/textfecha"
            android:textSize="15dp"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:text="@string/resfecha"
            android:id = "@+id/tvfecha"
            android:textSize="15dp"
            android:layout_gravity="left"
            />

    </LinearLayout>




<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="5dp"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tel:"
        android:id="@+id/texttelefono"
        android:textSize="15dp"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restelefono"
        android:id="@+id/tvtelefono"
        android:textSize="15dp"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="5dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:text="Email:"
        android:id="@+id/textemail"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:text="@string/resemail"
        android:id="@+id/tvemail"
        android:layout_gravity="center_horizontal" />
</LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="Descripción:"
            android:id="@+id/textdescrip"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/resdescripcion"
            android:textAlignment="center"
            android:id="@+id/tvdescripcion"
            android:layout_weight=".2"
            android:layout_gravity="center_horizontal"
            android:textSize="15dp"
            />

    </LinearLayout>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botoneditardatos"
        android:id="@+id/editardatosid"
        android:textAlignment="center"
        android:focusableInTouchMode="false"
        android:clickable="true"
        android:nestedScrollingEnabled="false"
        android:theme="@style/raised"
        android:layout_marginLeft="120dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        />


</LinearLayout>

